--- a/composer.json
+++ b/composer.json
@@ -43,16 +43,5 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
-    "scripts": {
-        "copy-adminerneo": [
-            "mkdir -p resources/adminerneo",
-            "cp -r ../laravel-adminerneo-builder/output/* resources/adminerneo/"
-        ],
-        "post-package-install": [
-            "@copy-adminerneo"
-        ],
-        "post-package-update": [
-            "@copy-adminerneo"
-        ]
-    }
+    "scripts": {}
 }
