Add Content Security Policy documentation and update middleware for nonce handling

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,5 @@
         "sort-packages": true
     },
     "minimum-stability": "stable",
-    "prefer-stable": true,
-    "scripts": {}
+    "prefer-stable": true
 }
