Update composer.json to specify Laravel 11 compatibility

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "version": "1.0.0",
     "keywords": [
-        "laravel",
+        "laravel11",
         "adminerneo",
         "database",
         "management",
